--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,12 @@
-# dependencies
-/**/node_modules
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
 
-# testing
-/**/coverage
+# Test binary, build with `go test -c`
+*.test
 
-# production
-/**/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
