cargo watch (continuous dev) + CORS

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -10,21 +10,13 @@ RUN cargo build
 RUN rm src/*.rs
 RUN rm -f target/debug/deps/api*
 
-# Build api
+FROM rustlang/rust:nightly-slim as cargo-run
+
+WORKDIR /usr/src/api
+
+# Copy custom code
+COPY --from=cargo-build /usr/src/api/target/debug /usr/src/api/target/debug
 COPY . .
-RUN cargo build
+RUN cargo install cargo-watch
 
-## Runner
-FROM debian:buster-slim
-
-ARG API_USER=api
-RUN groupadd ${API_USER} \
-    && useradd -g ${API_USER} ${API_USER} \
-    && mkdir -p /home/${API_USER}
-
-WORKDIR /home/${API_USER}
-COPY --from=cargo-build /usr/src/api/target/debug/api /home/${API_USER}/
-RUN chown -R ${API_USER}:${API_USER} ./api
-
-USER ${API_USER}
-CMD ["./api"]
+CMD ["cargo", "watch", "-x", "run"]
