run script to avoid shell clear + request on API

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -9,7 +9,6 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 # install app dependencies
 COPY package.json ./
-COPY package-lock.json ./
 RUN npm install
 RUN npm install react-scripts@3.4.1 -g
 
@@ -17,4 +16,4 @@ RUN npm install react-scripts@3.4.1 -g
 COPY . ./
 
 # start app
-CMD ["npm", "start"]
+CMD ["/bin/sh", "-C", "run.sh"]
