--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2018"
 
 [dependencies]
 rocket = "0.4.5"
+rocket_contrib = "0.4.5"
+chrono = {version="0.4",features = ["serde"]}
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+uuid = { version = "0.8", features = ["serde", "v4"] }
